[package]
name = "factorio_blueprint_processor"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.10.0"
flate2 = "1.0.6"
rand = "0.6"
image = "*"
exoquant = "0.2"
rpds = "0.5"
ordered-float = "0.2"
arrayvec = "0.4"
smallvec = "0.6"
array_ext = "0.2"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "sandbox"
harness = false


[profile.dev]
opt-level = 3
debug = true

[profile.bench]
opt-level = 3
debug = true
